[package]
name = "idea-ssh-fix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
inotify = { version = "0.11.0", default-features = false}

[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"
unused_must_use = "deny"
dead_code = "warn"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_pub_crate = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
await_holding_lock = "deny"
indexing_slicing = "deny"
float_cmp = "deny"
modulo_one = "deny"